# TermiBase

./: .commit_history  .gitignore  HOMEBREW_CORE_SUBMISSION.md  HOMEBREW_SETUP.md  INSTALL.md  INSTALL.txt  INSTALL_COMMAND.md  LICENSE  MANIFEST.in  PUBLISH.md  QUICKSTART.md  QUICK_BREW_SETUP.txt  README.md  README_BREW.md  SUBMIT_TO_HOMEBREW.md  TEST_RESULTS.md  USAGE.md  install-windows.bat  install-windows.ps1  install.sh  pyproject.toml  requirements.txt  setup.py  submit-homebrew.sh  termibase.bat  termibase_setup_windows.py  test_comprehensive.py  test_edge_cases.py
Formula/: termibase-core.rb  termibase.rb
termibase/: __init__.py  __main__.py
termibase/challenge/: __init__.py  bank.py  distinct_200_challenges.py  environment.py  evaluator.py  scorer.py  visualizer.py
termibase/cli/: __init__.py  input_handler.py  main.py
termibase/demos/: __init__.py  data.py
termibase/engine/: __init__.py  simulator.py
termibase/learn/: __init__.py  content.py  lesson.py  menu.py
termibase/parser/: __init__.py  analyzer.py
termibase/storage/: __init__.py  engine.py
termibase/tests/: __init__.py  test_analyzer.py  test_storage.py
termibase/visualizer/: __init__.py  banner.py  renderer.py
termibase_setup/: __init__.py
